--- a/ajax.html
+++ b/ajax.html
@@ -1,10 +1,21 @@
-<div id="fundraisemodal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="z-index:999999;">
-  <div class="modal-body" style="color:white; height: auto; padding-top: 5px; margin-top: 15px; overflow:hidden;">
-  <a href="https://link.to/donate-default" class="eoy-donate"> 
-    <img class="eoy-donate-img" src='image-default.jpg'>
-  </a>
-  </div>
-  <div class="modal-footer" style="border-top: none; background-color: transparent; padding-top:0;">
-    <a href="https://link.to/donate-default" class="btn btn-block eoy-donate" style="background-image: none !important; background-color: #990000; color:white; font-size: 2em; padding:1em 1em 1em 1.825em;">DONATE NOW</a>
-  </div>
-</div>
+<div id="fundraisemodal" class="modal fade">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" style="font-size:1.8em;">Etiam id libero eu quam ultricies congue.</h4>
+      </div>
+      <div class="modal-body">
+      <!--<img class="modal-image eoy-donate-img" src='image-default.jpg'> -->
+      <img class="modal-image eoy-donate-img" src="holder.js/568x250/sky">
+      <p style="margin-bottom:5px;">
+        Donec interdum nisl ex, ut venenatis eros faucibus non. Curabitur laoreet ultricies blandit. Ut velit nibh, placerat eu hendrerit nec, fermentum vitae magna.
+      </p>
+      </div>
+      <div class="modal-footer">
+        <p>In posuere pretium nisi.</p>
+        <a href="https://link.to/donate-default" class="btn btn-block eoy-donate" style="" target="_blank" class="eoy-donate">Mauris quis lacinia quam.</a>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
